# TodoMooMoo

code/: CMakeLists.txt  main.cpp
code/Frames/: TodoMooMooMainFrame.cpp  TodoMooMooMainFrame.h  generated.cpp  generated.h
code/icons/: move_task.xcf
wxFB_Project/: TodoMooMoo.fbp
